<resources>
    <string name="app_name">Conference</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_logo">LogoActivity</string>
    <string name="un_setting">未设置</string>
    <string name="label_site">座位号:</string>
    <string name="lable_terminal_type">终端类型:</string>
    <string name="ip">IP地址:</string>
    <string name="version">版本号:</string>
    <string name="wait_in">等待接入中</string>
    <string name="has_in">已接入</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="has_register">您已报到</string>
    <string name="please_register">请您刷卡报到</string>
    <string name="hide_bar">隐藏虚拟按键</string>
    <string name="show_bar">显示虚拟按键</string>
    <string name="have_passed">通　过</string>
    <string name="have_not_passed">未通过</string>
    <string name="apply_laws_num">符合法定人数</string>
    <string name="not_apply_laws_num">不符合法定人数</string>


    <string name="hello_world">Hello world!</string>
    <string name="eth_config_title" translatable="false">Configure Ethernet device</string>
    <string name="eth_advanced_title" translatable="false">Advanced Ethernet setting</string>
    <string name="eth_setting" translatable="false">Ethernet setting</string>
    <string name="eth_dev_list" translatable="false">Ethernet Devices:</string>
    <string name="eth_con_type" translatable="false">Connection Type</string>
    <string name="eth_con_type_dhcp" translatable="false">DHCP</string>
    <string name="eth_con_type_manual" translatable="false">Static IP</string>
    <string name="eth_dns" translatable="false">DNS address</string>
    <string name="eth_gw" translatable="false">Gateway address</string>
    <string name="eth_ipaddr" translatable="false">IP address</string>
    <string name="eth_quick_toggle_title" translatable="false">Ethernet</string>
    <string name="eth_quick_toggle_summary" translatable="false">Turn on Ethernet</string>
    <string name="eth_check_config" translatable="false">Check Ethernet</string>
    <string name="eth_do_config" translatable="false">Configure Ethernet</string>
    <string name="eth_conf_summary" translatable="false">Configure Ethernet devices</string>
    <string name="eth_mask" translatable="false">Netmask</string>
    <string name="eth_toggle_summary_off" translatable="false">Turn off Ethernet</string>
    <string name="eth_toggle_summary_on" translatable="false">Turn on Ethernet</string>
    <string name="menu_save">confirm</string>
    <string name="menu_cancel">cancel</string>
    <string name="proxy_setting">Proxy setting</string>
    <string name="eth_proxy">Proxy server</string>
    <string name="proxy_address">Proxy hostname</string>
    <string name="proxy_port">Proxy port</string>
    <string name="proxy_exclusionlist">Bypass proxy for</string>
    <string name="eth_proxy_address">Proxy address</string>
    <string name="show_need_setting">You should setting the static IP and DNS address in this mode</string>
    <string name="advanced_need_setting">You should not set the Proxy address and Proxy port null</string>
</resources>
